# Your-Future-Block

./: .dockerignore  .env.example  .gitignore  CNAME  Dockerfile  Makefile  README.md  fly.toml  package.json  pyproject.toml
backend/app/: api.py  db.py  schemas.py  settings.py
backend/app/data/: address_fallbacks.json
backend/app/routers/: cells.py  compat.py  lookup.py  meta.py  scenarios.py
backend/app/services/: compat.py  explain.py  geocode.py  risk.py
backend/app/static/: app.js  index.html  styles.css
backend/db/init/: 001_extensions.sql
backend/pipelines/real/: 00_grid.py  10_climate.py  11_calfire_fhsz.py  12_calfire_wui.py  13_fema_nfhl.py  14_noaa_slr.py  15_usgs_3dep.py  16_nlcd.py  17_cdc_svi.py  18_census_acs.py  19_fema_nri.py  20_lodes.py  21_la_metro_gtfs.py  90_compute_scores.py  build.py  config.py  io.py
backend/pipelines/synthetic/: build.py
backend/shared/: duckdb_loader.py  schema.sql  scoring.py  weights.yaml
config/: datasets.yaml  weights.json
data/: address_fallbacks.json  city_fallbacks.json  risk_cells.geojson
la-risk-explorer-main/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
la-risk-explorer-main/src/: App.tsx  index.css  main.tsx
la-risk-explorer-main/src/components/atlas/: LA3DMap.tsx  LAInteractiveMap.tsx  LAMap.tsx  Sparkline.tsx
la-risk-explorer-main/src/data/: laBlocks.ts
la-risk-explorer-main/src/lib/: api.ts  riskTone.ts
la-risk-explorer-main/src/pages/: Atlas.tsx  Index.tsx
public/: app.js  index.html  styles.css
src/: geo.js  geocode.js  riskEngine.js  scoring.js  server.js
tests/: scoring.test.js
